--- a/src/components/hamburger-menu/hamburger-menu.scss
+++ b/src/components/hamburger-menu/hamburger-menu.scss
@@ -18,7 +18,7 @@
   -o-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
   cursor: pointer;
-  background-color: $yellow;
+  background-color: rgba(0, 0, 0, 0);
   border: none;
 }
 
