--- a/src/components/schedule/schedule.scss
+++ b/src/components/schedule/schedule.scss
@@ -91,6 +91,7 @@
     flex-direction: column;
   }
   .scheduleWrapper {
+    overflow: hidden;
     .heading {
       margin-bottom: 50px;
     }
