--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,11 +1,11 @@
 @import 'vars';
 
 @mixin wrapper {
-  margin: 0 100px;
+  padding: 0 100px;
   @media screen and (max-width: $tablet) {
-    margin: 0 50px;
+    padding: 0 50px;
   }
   @media screen and (max-width: $mobile) {
-    margin: 0 25px;
+    padding: 0 25px;
   }
 }
